style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-image: url(./body.svg);
  background-position: center;
  background-size: cover;
  height: 100vh;
}

body.dark-mode {
  background-image: url(./bgDark.6e887057.svg);
  background-color: #121212;
}

body.dark-mode header,
body.dark-mode footer,
body.dark-mode select,
body.dark-mode #user-welcome button,
body.dark-mode .registration-button button {
  background-color: #1e1e1e;
}

body.dark-mode button,
body.dark-mode #user-welcome h2 {
  background-color: #1f66ad;
}

body.dark-mode .logInCont .btn:hover {
  background-color: #1c5fa1;
}

body.dark-mode .logInCont {
  background-color: #292929;
}

body.dark-mode .top {
  border-bottom: 1px solid #191919;
}

body.dark-mode label p {
  color: white;
  font-weight: normal;
}

body.dark-mode .inputClass {
  background-color: #212121;
  border: none;
}

body.dark-mode .logIn-container a {
  color: #ef4836;
}

a {
  text-decoration: none;
  color: hsla(0, 0%, 100%, 0.87);
}

select,
button {
  border: none;
  background-color: #0f2e3b;
  color: hsla(0, 0%, 100%, 0.87);
  font-size: 16px;
  font-weight: 500;
}

ul {
  display: flex;
  justify-content: space-between;
  align-items: center;
  list-style: none;
}

.container {
  width: 100%;
}

header {
  max-width: 1915px;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-size: 16px;
  font-weight: 500;
  line-height: 1.7;
  background-color: #0f2e3b;
  color: hsla(0, 0%, 100%, 0.87);
  margin-bottom: 101px;
}

header li {
  display: flex;
  align-items: center;
  padding: 0rem 1rem;
  margin-right: 5px;
}

.btn-primary--green {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #228b22;
  height: 50px;
  padding-left: 16px;
  padding-right: 16px;
}

.left a:hover,
header button:hover,
header select:hover,
header li:hover {
  cursor: pointer;
  color: hsl(0, 0%, 69%);
}

/* login container */

main {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  padding-bottom: 50px;
}

.logInCont {
  width: 500px;
  display: flex;
  flex-direction: column;
  text-align: center;
  background-color: white;
  color: #757575;
  padding: 15px 40px 40px;
  border-radius: 10px;
  box-shadow: rgba(0, 0, 0, 0.2) 0px 6px 16px 0px;
}

form {
  display: flex;
  flex-direction: column;
}

.top {
  display: flex;
  align-items: center;
  justify-content: center;
  border-bottom: 1px solid #eceff1;
  padding: 10px;
  margin-bottom: 25px;
  font-size: 18px;
}

label {
  display: flex;
  align-items: end;
  margin-bottom: 4px;
  font-size: 14px;
}

label p {
  font-weight: bold;
  color: #757575;
}

.logIn-container a {
  color: #00f;
}

.button-container {
  min-width: 200px;
  min-height: 46px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: auto;
  margin-top: 50px;
  border-radius: 5px;
}

.button-container .btn {
  border-radius: 5px;
  min-width: 200px;
}

.logInCon.btn {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  padding: 0.7em 1em;
  outline: none;
  margin: 5px;
  cursor: pointer;
  border-radius: 5px;
  margin: auto;
  border: none;
  border-radius: 5px;
}

.logInCont .btn:hover {
  background-color: #1e7e1e;
}

input {
  width: 100%;
  background-color: #eceff1;
  border: 2px solid #eceff1;
  font-size: 16px;
  padding: 10px 15px;
  margin-bottom: 5px;
  height: 46px;
  border-radius: 5px;
}

input:hover {
  cursor: pointer;
}

.inputClass:focus {
  transition: border-color 250ms, background-color 250ms;
  border-color: #b0bec5;
  background-color: #fff;
  outline: none;
  box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 7px;
}

.boxInput {
  padding-top: 15px;
}

.input-container {
  padding-top: 15px;
  position: relative;
}

.password-container .eye {
  position: absolute;
  bottom: 20%;
  right: 9px;
}

.name-surname {
  display: grid;
  grid-template-columns: repeat(2, auto);
  column-gap: 15px;
  width: 100%;
}

#user-welcome {
  display: flex;
  align-items: center;
}

#user-welcome h2 {
  font-size: 1rem;
}

#user-welcome button {
  width: 100%;
  background-color: #0f2e3b;
}

footer {
  width: 100%;
  /* position: absolute;
  bottom: 0; */
  padding: 1em;
  gap: 1em;
  display: flex;
  -webkit-box-pack: center;
  justify-content: center;
  align-items: center;
  background-color: #0f2e3b;
  color: hsl(0deg 0% 100% / 87%);
}

footer a {
  padding: 5px;
  transition: background-color 350ms;
}

.footer-information {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.line {
  width: 1px;
  height: 24px;
  background-color: hsl(0deg 0% 100% / 87%);
}

.d-none {
  display: none;
}

